--- a/src/stylesheets/lungo.layout.nav.styl
+++ b/src/stylesheets/lungo.layout.nav.styl
@@ -14,7 +14,7 @@ nav
   header &
     & a, button
       position: relative
-      padding: 0 0.75em !important
+      text-align: center
       float: left
       height: HEADER_HEIGHT
       min-width: HEADER_HEIGHT
@@ -29,8 +29,7 @@ nav
       line-height: FONT_SIZE_LARGE
 
     & .loading
-      margin-top: .5em
-      font-size: 1.6em
+      font-size: 1.5em
       & + .icon
         display: none
 
@@ -108,7 +107,6 @@ nav
           top: 0.5em
           font-size: FONT_SIZE_LARGE
           line-height: 1.0em
-
 
 
   /* ========================================================================= */
