--- a/src/stylesheets/theme/theme.widget.button.styl
+++ b/src/stylesheets/theme/theme.widget.button.styl
@@ -12,10 +12,14 @@ article
     color: #fff !important
     -webkit-font-smoothing: antialiased
     border-radius BORDER_radius
+
+    box-shadow: inset 0 -1px rgba(0,0,0,0.1), 0 1px rgba(0,0,0,0.075)
+    text-shadow:  0 1px rgba(0,0,0,0.1)
+
     &:hover
-      box-shadow: inset 0 0 5em rgba(255,255,255,0.15)
+      box-shadow: inset 0 0 5em rgba(0,0,0,0.1), inset 0 -1px rgba(0,0,0,0.15), 0 1px rgba(0,0,0,0.075)
     &:active
-      box-shadow inset 0 0 5em rgba(0,0,0,0.3)
+      box-shadow inset 0 0 5em rgba(0,0,0,0.2), inset 0 1px rgba(0,0,0,0.2)
 
     & .icon
       opacity: 0.65
