New style of .tag

--- a/src/stylesheets/lungo.widget.styl
+++ b/src/stylesheets/lungo.widget.styl
@@ -67,14 +67,14 @@
 
 /* ================================  TAG  ================================ */
 .tag
-  SIZE = 20px
+  SIZE = 16px
   font-size: FONT_SIZE_TINY
-  min-width: SIZE
+  min-width: SIZE + 1
   height: SIZE
   line-height: SIZE !important
   text-align: center
   z-index: 1
-  display: inline-block
+  display: inline-block !important
 
 
 /* ================================  .LAYOUT  ================================ */
