--- a/src/stylesheets/theme/theme.widget.styl
+++ b/src/stylesheets/theme/theme.widget.styl
@@ -10,10 +10,12 @@
 /* =================================  TAG  ================================= */
 .tag:not(.icon)
   color: #fff
-  font-weight: 400
+  font-weight: bold
+  text-shadow: 0 1px rgba(0,0,0,0.25)
   &.count
-    border-radius 1em
+    border-radius 0.3em
     background-color: DANGER
+    box-shadow 0 0 1px rgba(0,0,0,0.25)
 
 /* =================================  PULL  =============================== */
 body > section > [data-control="pull"]
