Fix padding in aside

--- a/src/stylesheets/__init.styl
+++ b/src/stylesheets/__init.styl
@@ -4,7 +4,8 @@
 HEADER_HEIGHT           = 46px
 HEADER_GROUPBAR_HEIGHT  = 34px
 
-ASIDE_WIDTH             = 264px
+ASIDE_WIDTH             = 256px
+ASIDE_PADDING           = 8px
 ASIDE_WIDTH_SMALL       = 64px
 ASIDE_SMALL_ICON        = 48px
 
