--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -49,8 +49,7 @@ body
       & > .title
         z-index: -1
         float: left
-        // font-size: FONT_SIZE_BIG
-        font-size: 1.25em
+        font-size: 1.21em
         box-flex(1)
         &.centered
           position: absolute
@@ -100,6 +99,7 @@ body
     width: ASIDE_WIDTH
     display: none
     z-index: -1
+    border-right: solid ASIDE_PADDING transparent
     & > header
       & .title
         margin: 0 INDENT
