--- a/src/stylesheets/lungo.media.phone.styl
+++ b/src/stylesheets/lungo.media.phone.styl
@@ -1,4 +1,13 @@
-@import "__init.styl"
+/**
+ * Stylesheet
+ *
+ * @namespace Lungo.Media
+ * @class Phone
+
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+
 
 /* ==== Any phone ==== */
 @media only screen and (max-width: 767px)
