--- a/src/stylesheets/lungo.widget.empty.styl
+++ b/src/stylesheets/lungo.widget.empty.styl
@@ -12,5 +12,7 @@ body > section > article > .empty
   & > strong
     font-size: FONT_SIZE_BIG
     line-height: FONT_SIZE_BIG
+  & > small
+    font-size: FONT_SIZE_SMALL
   & > button
     margin: 0.5em 0
