--- a/src/stylesheets/lungo.base.styl
+++ b/src/stylesheets/lungo.base.styl
@@ -131,8 +131,8 @@ img
   vertical-align: middle
   font-size: 0
 
-// strong
-//   font-weight: bold
+strong
+  font-weight: bold
 
 table
   border-collapse: collapse
