--- a/src/stylesheets/theme/theme.widget.styl
+++ b/src/stylesheets/theme/theme.widget.styl
@@ -12,6 +12,8 @@
   color: #fff
   font-weight: bold
   text-shadow: 0 1px rgba(0,0,0,0.25)
+  &:not(.count)
+    border-radius 0.2em
   &.count
     border-radius 0.3em
     background-color: DANGER
