--- a/src/stylesheets/theme/theme.widget.notification.styl
+++ b/src/stylesheets/theme/theme.widget.notification.styl
@@ -42,7 +42,7 @@
           color: DANGER !important
 
     &.error, &.success
-      background-color: ASIDE
+      background-color: rgba(0,0,0,0.8)
       border-bottom: solid 0.4em
       color: #fff
       & small
