--- a/src/stylesheets/lungo.widget.pull.styl
+++ b/src/stylesheets/lungo.widget.pull.styl
@@ -5,7 +5,7 @@ section.show > [data-control="pull"]
   position: absolute
   z-index: -1
   top: HEADER_HEIGHT
-  width: 100%
+  width: inherit
   height: 80px
   padding: 10px 0
   text-align: center
