--- a/src/stylesheets/lungo.widget.notification.styl
+++ b/src/stylesheets/lungo.widget.notification.styl
@@ -11,7 +11,7 @@ LOADING = 104px
 WINDOW_WIDTH = 280px
 
 .notification
-  position: relative
+  position: absolute
   top: 0
   left: 0
   width: 100%
