--- a/src/stylesheets/theme/__init.styl
+++ b/src/stylesheets/theme/__init.styl
@@ -2,7 +2,7 @@
 
 /* -------------------------- COLOUR -------------------------- */
 TEXT                = #000
-THEME               = #3498db
+THEME               = #00AFE3
 COLOR               = #F4F4F4
 ASIDE               = #2f2f2f
 DANGER              = #e74c3c
@@ -10,6 +10,7 @@ SUCCESS             = #2ecc71
 WARNING             = #edba22
 DISABLED            = #acb8b9
 BACKGROUND          = lighten(#DFDFDF, 25%)
+
 /* -------------------------- VARIATIONS -------------------------- */
 LIST_border         = darken(COLOR, 15%)
 NAV_LINK            = lighten(ASIDE, 20%)
@@ -18,10 +19,12 @@ NAV_LINK_ACTIVE     = #fff
 TRANSITION_time     = 400ms
 TRANSITION_easing   = ease
 /* ------------------------- RADIUS ------------------------- */
-BORDER_radius       = 2px
+BORDER_radius       = 1px
 /* -------------------------- FORM -------------------------- */
 FORM_color          = darken(#e5e5e5, 5%)
 FORM_border         = 2px
 FORM_border_radius  = (BORDER_radius * FORM_border)
 /* -------------------------- BUTTON -------------------------- */
-SHADOW              = rgba(0,0,0,0.15)
+SHADOW              = rgba(0,0,0,0.1)
+
+
