Change size in forms

--- a/src/stylesheets/lungo.widget.form.styl
+++ b/src/stylesheets/lungo.widget.form.styl
@@ -15,9 +15,9 @@ form, .form
     margin: 0.15em 0
 
   & input:not([type="checkbox"]), textarea, select, .progress, label.select, [data-control-progress]
-    font-size: FONT_SIZE_BIG
+    font-size: FONT_SIZE_NORMAL
     &.large
-      font-size: FONT_SIZE_LARGE
+      font-size: FONT_SIZE_BIG
 
   & input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], select, textarea, label.select
     display: inline-block
