--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -28,13 +28,18 @@ body
       box-flex(0)
       z-index: 3
       position: relative
-
     & > header
       ordinal-group(1)
+
+      // position: fixed
+      // width: 100%
+
     & > article
       box-flex(1)
       ordinal-group(2)
       z-index: -1
+      // padding-top: HEADER_HEIGHT
+
     & > footer
       ordinal-group(3)
 
