--- a/src/stylesheets/theme/theme.widget.styl
+++ b/src/stylesheets/theme/theme.widget.styl
@@ -11,7 +11,7 @@
 .tag:not(.icon)
   color: #fff
   font-weight: bold
-  text-shadow: 0 1px rgba(0,0,0,0.25)
+  text-shadow: none
   &:not(.count)
     border-radius 0.2em
   &.count
