--- a/src/stylesheets/theme/theme.base.styl
+++ b/src/stylesheets/theme/theme.base.styl
@@ -16,6 +16,9 @@ body
   font-weight: bold
   letter-spacing: -0.05em
 
+  & *
+    -webkit-font-smoothing: antialiased
+
   & .text
     &.thin
       font-weight: 300
