--- a/src/stylesheets/theme/theme.widget.button.styl
+++ b/src/stylesheets/theme/theme.widget.button.styl
@@ -11,12 +11,12 @@ article
   & .button, button
     border-radius BORDER_radius
     box-shadow: inset 0 -1px rgba(0,0,0,0.1), 0 1px rgba(0,0,0,0.075)
+    box-shadow: inset 0 -1px rgba(0,0,0,0.1)
 
     &, & abbr
       color: #fff
       font-weight: 600
       text-shadow:  0 1px rgba(0,0,0,0.1)
-      -webkit-font-smoothing: antialiased
 
     &:hover
       box-shadow: inset 0 0 5em rgba(0,0,0,0.1), inset 0 -1px rgba(0,0,0,0.15), 0 1px rgba(0,0,0,0.075)
