--- a/src/stylesheets/theme/theme.layout.styl
+++ b/src/stylesheets/theme/theme.layout.styl
@@ -41,7 +41,5 @@ body > section
     box-shadow: 0 -1px 0 rgba(0,0,0,0.05)
 
 body > aside
-  COLOR = darken(ASIDE, 25%)
-  background-color: COLOR
+  background-color: darken(ASIDE, 25%)
   color: WHITE
-  box-shadow 0 0 0 6px COLOR
