--- a/src/stylesheets/theme/theme.widget.button.styl
+++ b/src/stylesheets/theme/theme.widget.button.styl
@@ -27,7 +27,7 @@ article
       opacity: 0.65
       text-shadow: 0 -1px 0 rgba(0,0,0,0.25)
 
-  & button, .button, .tag:not(.icon)
+  & button, .button
     &
       background-color: darken(THEME, 15%)
     &.color
