--- a/src/stylesheets/theme/theme.layout.list.styl
+++ b/src/stylesheets/theme/theme.layout.list.styl
@@ -57,7 +57,7 @@
       &:not(.active) .tag:not(.icon)
         background-color: ASIDE
       &.active .tag:not(.icon)
-        background-color: darken(THEME, 15%)
+        background-color: lighten(ASIDE, 10%)
 
     & .icon
       color: lighten(ASIDE, 70%)
