--- a/src/stylesheets/theme/__init.styl
+++ b/src/stylesheets/theme/__init.styl
@@ -5,6 +5,7 @@ TEXT                = #000
 THEME               = #00AFE3
 COLOR               = #F4F4F4
 ASIDE               = #2f2f2f
+// ASIDE = #2C3E50
 DANGER              = #e74c3c
 SUCCESS             = #2ecc71
 WARNING             = #edba22
