--- a/src/stylesheets/lungo.base.styl
+++ b/src/stylesheets/lungo.base.styl
@@ -103,10 +103,12 @@ body
   width: 100%
   height: 100%
   overflow-y: visible !important
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -moz-user-select: moz-none
+  user-select: none
 
   // @TODO: Why??
-  // -webkit-user-select: none
-  // -webkit-touch-callout: none
   // -webkit-box-orient: vertical
   // -webkit-box-align: stretch
   // -webkit-tap-highlight-color: rgba(0,0,0,0)
@@ -116,7 +118,6 @@ body
     box-sizing(border-box)
     margin: 0
     padding: 0
-    // -webkit-user-select: none
     // -webkit-tap-highlight-color: rgba(255, 255, 255, 0)
 
 a
