--- a/src/stylesheets/theme/__init.styl
+++ b/src/stylesheets/theme/__init.styl
@@ -2,7 +2,7 @@
 
 /* -------------------------- COLOUR -------------------------- */
 TEXT                = #000
-THEME               = #00AFE3
+THEME               = ##03151a
 COLOR               = #F4F4F4
 ASIDE               = #2f2f2f
 DANGER              = #e74c3c
